# TOMTIT-Agent

./: .gitignore  CLAUDE.md  README.md  TECH_DEBT.md  TOM_TIT_AGENT_MEMORY_ARCHITECTURE_GUIDE.md  TOOL_CALL_PROCESS.md  list_questions.md  main.py  pyproject.toml  test_fastAPI.py
TOMTIT_Web_UI/: AGENTS.md  CLAUDE.md
agent_core/: __init__.py  cli.py
docs/: ARCHITECTURE.md  ARCHIVE_BUILD_SPEC_OLD.md  BUILD_SPEC.md  CURRENT_PROJECT_STATUS.md  MVP_MASTER_PLAN.md  SECURITY_DEBT.md  SPEC_M6_REMOTE_MEMORY_CLIENT.md  SPEC_P1_contract.md  SPEC_P2_local_client.md  SPEC_P3_runtime_wiring.md  SPEC_memory_client.md  VALIDATION_PLAN.md
scripts/: run_conversation_eval.py
tests/: test_arg_resolver.py  test_build_harness_p0_9a_core.py  test_build_harness_p0_9a_r2_adversarial.py  test_build_harness_p0_9a_r3_integrity.py  test_build_harness_p0_9a_r4_finding_integrity.py  test_build_harness_p0_9b1_domain_schemas_ports.py  test_build_harness_p0_9b1_r1_domain_integrity.py  test_build_harness_p0_9b1_r2_context_membership_integrity.py  test_build_harness_p0_9b1_r3_dirty_context_exclusivity.py  test_cli.py  test_confirmation_evidence_factory.py  test_confirmed_decision_models.py  test_confirmed_required_write.py  test_confirmed_save_runtime.py  test_confirmed_write_policy.py  test_contracts.py  test_conversation_p0_7k_hotfix1.py  test_conversation_p0_8a_agent_capability_backbone.py  test_conversation_p0_8b_eval_debug_console.py  test_conversation_p0_acceptance.py  test_conversation_p0_direct_response_boundary.py  test_conversation_p0_fix8_r1_relation_entity_cleanup.py  test_local_client.py  (+41 more)
(+196 files in other folders)
